# joerl

./: .gitignore  ACTIX_COMPARISON.md  CHANGELOG.md  CLUSTERING.md  CONTRIBUTING.md  Cargo.toml  DESIGN_NOREPLY_RECEIVE.md  DISTRIBUTED.md  GETTING_STARTED.md  GETTING_STARTED_RU.md  IMPLEMENTATION_SUMMARY.md  JOERL_VS_ACTIX.md  NAMED_PROCESSES.md  PANIC_HANDLING.md  PROPERTY_TESTING.md  QUICKSTART_CLUSTERING.md  README.md  SERIALIZATION.md  TELEMETRY.md  TELEMETRY_SUMMARY.md  TODO.md  WARP.md
.erl.history/: erlang-shell-log.1
.github/workflows/: ci.yml
benches/: actix_comparison.rs  benchmarks.rs
examples/: distributed_chat.rs  gen_server_counter.rs  link_monitor.rs  ping_pong.rs  supervision_tree.rs
joerl/: Cargo.toml
joerl/benches/: benchmarks.rs
joerl/examples/: actor_selective_receive.rs  counter.rs  distributed_cluster.rs  distributed_system_example.rs  document_workflow.rs  epmd_server.rs  gen_server_counter.rs  gen_server_deferred_reply.rs  gen_server_info.rs  gen_server_self_message.rs  gen_statem_turnstile.rs  link_monitor.rs  msg_to_self.rs  named_processes.rs  panic_handling.rs  ping_pong.rs  remote_actors.rs  remote_ping_pong.rs  scheduled_messaging.rs  serialization_example.rs  telemetry_demo.rs  turnstile.rs
joerl/src/: actor.rs  distributed.rs  epmd.rs  error.rs  gen_server.rs  gen_statem.rs  health.rs  lib.rs  mailbox.rs  message.rs  pid.rs  registry.rs  scheduler.rs  serialization.rs  supervisor.rs  system.rs  telemetry.rs
joerl/src/epmd/: client.rs  server.rs
joerl/tests/: actor_selective_receive.rs  gen_server_deferred_reply.rs  gen_statem_test.rs  integration_test.rs  proptest_epmd.rs  proptest_pid.rs  proptest_serialization.rs  registry_integration_test.rs  remote_messaging_test.rs  scheduler_integration_test.rs  supervisor_test.rs
joerl_macro/: Cargo.toml
joerl_macro/src/: lib.rs  mermaid.rs
src/: actor.rs  error.rs  gen_server.rs  gen_statem.rs  lib.rs  mailbox.rs  message.rs  pid.rs  supervisor.rs  system.rs
tests/: integration_test.rs  supervisor_test.rs
